[gd_scene load_steps=5 format=2]

[ext_resource path="res://graphics/player_hand.png" type="Texture" id=1]
[ext_resource path="res://scenes/PlayerHand.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[node name="PlayerHand" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MountainDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MountainDetector"]
shape = SubResource( 2 )

[node name="RegainControlTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="RegainControlTimer" to="." method="_on_RegainControlTimer_timeout"]
